--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,37 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
   div(ng-controller="DisplayProfileCtrl")
-      p {{profile.displayName}}
-      p {{profile.career.primaryRace}}
-      p {{profile.achievements.points.totalPoints}}
-      p {{profile.swarmLevels.protoss.totalLevelXP}}
+      div(class="career-stats-container")
+          h2 {{profile.displayName}}
+              span - id: {{profile.id}}
+          ul
+              li Primary Race: {{profile.career.primaryRace}}
+              li Terran Wins: {{profile.career.terranWins}}
+              li Protoss Wins: {{profile.career.protossWins}}
+              li Zerg Wins: {{profile.career.zergWins}}
+              li Highest Team Rank: {{profile.career.highestTeamRank}}
+              li Season Total Games: {{profile.career.seasonTotalGames}}
+              li Career Total Games: {{profile.career.careerTotalGames}}
+      div(class="race-stats-container")
+          h3 Race Stats
+          div(class="protoss-container")
+             h4 Protoss:
+             ul
+                 li Level: {{profile.swarmLevels.protoss.level}}
+                 li Total Level XP: {{profile.swarmLevels.protoss.totalLevelXP}}
+                 li Current Level XP: {{profile.swarmLevels.protoss.currentLevelXP}} 
+          div(class="terrain-container")
+              h4 Terran:
+              ul
+                  li Level: {{profile.swarmLevels.terran.level}}
+                  li Total Level XP: {{profile.swarmLevels.terran.totalLevelXP}}
+                  li Current Level XP: {{profile.swarmLevels.terran.currentLevelXP}} 
+          div(class="zerg-container")
+              h4 Zerg:
+              ul
+                  li Level: {{profile.swarmLevels.zerg.level}}
+                  li Total Level XP: {{profile.swarmLevels.zerg.totalLevelXP}}
+                  li Current Level XP: {{profile.swarmLevels.zerg.currentLevelXP}}
+           
+                        
