began formatting page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/application.css')
+    link(rel="stylesheet" href='https://fonts.googleapis.com/css?family=Lato:400,700')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js')
+    script(src='javascripts/ui-bootstrap-custom-tpls-0.13.4.js')
     script(src='javascripts/main.js')
   body(ng-app='battlenetApp')
     block content
