--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -1,7 +1,209 @@
-$blue: blue;
-$red: red;
-$green: green;
+/*search fields on page load*/
+body {
+    font-size: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: #f4f5f9;
+    font-family: 'Lato', sans-serif;
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+    h4 {
+        font-size: 3em;
+        margin: 10px 0;
+    }
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.container-wrap {
+    width: 100%;
+}
+.battle-net-form {
+    margin: 35vh auto 0;
+    height: 180px;
+    width: 1000px;
+    div.form-field {
+        float: left;
+        margin-right: 75px;
+        margin-bottom: 20px;
+        position: relative;
+        z-index: 1;
+    	max-width: 450px;
+    	width: calc(100% - 2em);
+        &:nth-child(2){
+            margin-right: 0;
+        }
+        input[type=text] {
+            padding: 10px;
+            border: 2px solid #000;
+            color: #000;
+            font-size: 2.2em;
+            width: 100%;
+            &:focus {
+                outline: none;
+            }
+        }
+        .input-field {
+        	background: #fff;
+        	box-shadow: 0px 0px 0px 2px transparent;
+        	color: #eca29b;
+        	-webkit-transition: box-shadow 0.3s;
+        	transition: box-shadow 0.3s;
+            &:focus {
+                box-shadow: 0px 0px 0px 2px #0e83cd;
+            }
+        }
+        .input-label {
+            padding: 0;
+        	font-weight: bold;
+            &::after {
+                content: '';
+              	position: absolute;
+              	top: 0;
+              	z-index: -1;
+              	width: 100%;
+              	height: 4em;
+            	box-shadow: 0px 0px 0px 0px;
+            	color: #0e83cd;
+            }
+        }
+        .label-content {
+        	padding: 0.75em 0.15em;
+            display: block;
+        }
+    }
+    input[type="submit"] {
+        display: block;
+        width: 100%;
+        cursor: pointer;
+        letter-spacing: 1px;
+        padding: 25px 80px;
+        margin-top: 20px;
+        outline: none;
+        transition: all .3s;
+        border: 2px solid #000;
+        background: #FFF;
+        &:hover {
+            background: #0e83cd;
+            color: #FFF;
+        }
+    }
+}
+.input-field:focus + .input-label::after {
+	-webkit-animation: anim-shadow 0.3s forwards;
+	animation: anim-shadow 0.3s forwards;
+}
+.bg-wrap.dark {
+    background-color: #313038;
+}
+.battle-net-form.fixed-top {
+    height: 100px;
+    margin: 0 auto;
+    transition: all .5s linear;
+    div.form-field {
+        width: 300px;
+        margin-bottom: 0;
+        &:nth-child(2){
+            margin-right: 75px;
+        }
+    }
+    input[type="submit"] {
+        float: left;
+        width: auto;
+        margin-top: 0;
+        display: inherit;
+    }
+}
 
-body{
-    color: $green;
+.career-stats-container {
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    .portrait {
+        border-radius: 50%;
+        border: 6px solid #FFF;
+        height: 90px;
+        width: 90px;
+        margin: 0 auto;
+    }
+}
+
+.race-stats-container {
+    width: 1000px;
+    margin: 0 auto;
+    h4 {
+        text-align: center;
+    }
+    .three-col {
+        float: left;
+        width: 315px;
+        border-radius: 6px;
+        border: 4px solid #000;
+        margin-right: 15px;
+        box-shadow: 0 0 10px 0 #000;
+        &:last-child {
+            margin-right: 0;
+        }
+        .upper {}
+        img {
+            width: 100%;
+            height: auto;
+        }
+        .lower{
+            padding: 0 10px;
+        }
+    }
+}
+
+.match-history-container {
+    width: 1000px;
+    margin: 0 auto;
+    ul {
+        float: left;
+        margin-right: 10px;
+    }
+}
+
+
+.progress {
+    height: 20px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    .progress-bar {
+        float: left;
+        width: 0;
+        height: 100%;
+        font-size: 12px;
+        line-height: 20px;
+        color: #fff;
+        text-align: center;
+        background-color: #337ab7;
+        -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+        box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+        -webkit-transition: width .6s ease;
+        -o-transition: width .6s ease;
+        transition: width .6s ease;
+    }
+}
+
+
+@-webkit-keyframes anim-shadow {
+	to {
+		box-shadow: 0px 0px 100px 50px;
+    	opacity: 0;
+	}
+}
+@keyframes anim-shadow {
+	to {
+		box-shadow: 0px 0px 100px 50px;
+    	opacity: 0;
+	}
 }
