--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,23 @@
 extends layout
 
 block content
-  div(ng-controller="GetUserInformationCtrl") 
-      form(ng-submit="processForm()")
-          input(type="text" ng-model="id" id="battle-net-id" placeholder="battle net ID")
-          input(type="text" ng-model="name" id="battle-net-name" placeholder="battle net Name")
-          input(type="submit" value="Submit")        
-      div(class="career-stats-container")
+  div(ng-controller="GetUserInformationCtrl" class="container-wrap") 
+      div(class="bg-wrap")
+          form(ng-submit="processForm()" class="battle-net-form")
+              div(class="clearfix")
+                  div(class="form-field")
+                      input(type="text" class="input-field" ng-model="id" id="battle-net-id" placeholder="battle.net id")
+                      label(class="input-label")
+                          span(class="label-content")
+                  div(class="form-field")
+                      input(type="text" class="input-field" ng-model="name" id="battle-net-name" placeholder="battle.net name")
+                      label(class="input-label") 
+                          span(class="label-content")
+                  input(type="submit" value="Submit")        
+      div(class="career-stats-container" ng-show="profile")
           h2 {{profile.displayName}}
               span - id: {{profile.id}}
-          div(class="portrait" style="height: 90px; width: 90px; overflow: hidden; position: relative")
-              img(src="{{profile.portrait.url}}" style="position: absolute; top: 0; left: 0;")
+          div(class="portrait" style="background-image: url('{{profile.portrait.url}}'); background-position-x: {{profile.portrait.x}}px; background-position-y: {{profile.portrait.y}}px;")
           ul
               li Primary Race: {{profile.career.primaryRace}}
               li Terran Wins: {{profile.career.terranWins}}
@@ -19,30 +26,44 @@ block content
               li Highest Team Rank: {{profile.career.highestTeamRank}}
               li Season Total Games: {{profile.career.seasonTotalGames}}
               li Career Total Games: {{profile.career.careerTotalGames}}
-      div(class="race-stats-container")
-          h3 Race Stats
-          div(class="protoss-container")
-             h4 Protoss:
-             ul
-                 li Level: {{profile.swarmLevels.protoss.level}}
-                 li Total Level XP: {{profile.swarmLevels.protoss.totalLevelXP}}
-                 li Current Level XP: {{profile.swarmLevels.protoss.currentLevelXP}} 
-          div(class="terrain-container")
-              h4 Terran:
-              ul
-                  li Level: {{profile.swarmLevels.terran.level}}
-                  li Total Level XP: {{profile.swarmLevels.terran.totalLevelXP}}
-                  li Current Level XP: {{profile.swarmLevels.terran.currentLevelXP}} 
-          div(class="zerg-container")
-              h4 Zerg:
-              ul
-                  li Level: {{profile.swarmLevels.zerg.level}}
-                  li Total Level XP: {{profile.swarmLevels.zerg.totalLevelXP}}
-                  li Current Level XP: {{profile.swarmLevels.zerg.currentLevelXP}}
-      div(class="match-history-container")
-      h3 Last 25 Matches              
-      ul(ng-repeat="match in matches")
-          li(ng-repeat="(key, val) in match") {{key}} : {{val}}
+      div(class="race-stats-container clearfix" ng-show="profile")
+          div(class="three-col protoss-container")
+             div(class="upper")
+                 img(src="/images/protoss-story-thumb.jpg")
+             div(class="lower")
+                 h4 Protoss
+                 ul
+                     li Level: {{profile.swarmLevels.protoss.level}}
+                     li Total Level XP: {{protossMax}}
+                     li Current Level XP: {{protossCurrent}} 
+                     li
+                         progressbar(max="protossMax" value="protossCurrent")
+          div(class="three-col terran-container")
+              div(class="upper")
+                  img(src="/images/terran-story-thumb.jpg")
+              div(class="lower")
+                  h4 Terran
+                  ul
+                      li Level: {{profile.swarmLevels.terran.level}}
+                      li Total Level XP: {{terranMax}}
+                      li Current Level XP: {{terranCurrent}}
+                      li
+                          progressbar(max="terranMax" value="terranCurrent")
+          div(class="three-col zerg-container")
+              div(class="upper")
+                  img(src="/images/zerg-story-thumb.jpg")
+              div(class="lower")
+                  h4 Zerg
+                  ul
+                      li Level: {{profile.swarmLevels.zerg.level}}
+                      li Total Level XP: {{zergMax}}
+                      li Current Level XP: {{zergCurrent}}
+                      li
+                          progressbar(max="zergMax" value="zergCurrent")
+      div(class="match-history-container clearfix" ng-show="matches")
+          h3 Last 25 Matches              
+          ul(ng-repeat="match in matches")
+              li(ng-repeat="(key, val) in match") {{key}} : {{val}}
 
           
           
