--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,16 +1,34 @@
-/*search fields on page load*/
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit; }
+
 body {
   font-size: 100%;
   height: 100%;
+  color: #333;
   margin: 0;
-  background-color: #f4f5f9;
-  font-family: 'Lato', sans-serif; }
+  background-color: #f5f5f5;
+  font-family: "Domine", serif; }
+  body h1, body h2, body h3, body h4 {
+    font-family: "Montserrat", sans-serif;
+    margin: 0; }
+  body input {
+    font-family: "Domine", serif; }
   body ul {
     list-style: none;
     padding: 0; }
+  body h2 {
+    font-size: 3.5em; }
+  body h3 {
+    font-size: 3.25em; }
   body h4 {
-    font-size: 3em;
-    margin: 10px 0; }
+    font-size: 3em; }
 
 .clearfix:after {
   content: "";
@@ -19,6 +37,10 @@ body {
 
 .container-wrap {
   width: 100%; }
+
+.wrapper {
+  width: 100%;
+  padding: 40px 0; }
 
 .battle-net-form {
   margin: 35vh auto 0;
@@ -85,10 +107,11 @@ body {
   animation: anim-shadow 0.3s forwards; }
 
 .bg-wrap.dark {
-  background-color: #313038; }
+  background-color: #222; }
 
 .battle-net-form.fixed-top {
   height: 100px;
+  padding-top: 16px;
   margin: 0 auto;
   transition: all 0.5s linear; }
   .battle-net-form.fixed-top div.form-field {
@@ -102,16 +125,35 @@ body {
     margin-top: 0;
     display: inherit; }
 
+.career-wrapper {
+  box-shadow: inset 0 8px 8px -8px #333, inset 0 -8px 8px -8px #333;
+  transition: all 0.5s ease; }
+
 .career-stats-container {
   width: 1000px;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  color: #FFF; }
   .career-stats-container .portrait {
     border-radius: 50%;
-    border: 6px solid #FFF;
     height: 90px;
     width: 90px;
-    margin: 0 auto; }
+    margin: 10px auto;
+    border: 2px solid #f5f5f5; }
+  .career-stats-container ul {
+    font-size: 20px;
+    margin: 0; }
+    .career-stats-container ul li {
+      padding: 2px 0; }
+
+.card-wrapper {
+  background-color: #f5f5f5;
+  position: relative; }
+
+.races {
+  animation: slidein 0.5s ease 0.8s forwards;
+  margin-top: -504px;
+  min-height: 510px; }
 
 .race-stats-container {
   width: 1000px;
@@ -120,30 +162,50 @@ body {
     text-align: center; }
   .race-stats-container .three-col {
     float: left;
-    width: 315px;
+    width: 320px;
     border-radius: 6px;
-    border: 4px solid #000;
-    margin-right: 15px;
-    box-shadow: 0 0 10px 0 #000; }
+    margin-right: 20px;
+    box-shadow: 0 0 6px 0 #333;
+    background-color: #222;
+    color: #FFF;
+    animation: fadeDown 1s ease 1.2s forwards;
+    opacity: 0; }
     .race-stats-container .three-col:last-child {
       margin-right: 0; }
     .race-stats-container .three-col img {
       width: 100%;
-      height: auto; }
+      height: auto;
+      border-radius: 6px 6px 0 0; }
     .race-stats-container .three-col .lower {
-      padding: 0 10px; }
+      padding: 0 20px; }
+    .race-stats-container .three-col ul li {
+      padding: 2px 0; }
 
 .match-history-container {
-  width: 1000px;
-  margin: 0 auto; }
+  width: 1010px;
+  margin: 0 auto;
+  padding: 60px 0; }
+  .match-history-container h3 {
+    text-align: center;
+    margin-bottom: 20px; }
   .match-history-container ul {
     float: left;
-    margin-right: 10px; }
+    width: 190px;
+    height: 150px;
+    border-radius: 6px;
+    box-shadow: 0 0 6px #000;
+    padding: 10px;
+    margin: 0px 6px 12px 6px;
+    background-color: #222;
+    color: #FFF;
+    opacity: 0; }
+    .match-history-container ul li {
+      padding: 2px 0; }
 
 .progress {
   height: 20px;
-  margin-bottom: 20px;
   overflow: hidden;
+  margin-top: 8px;
   background-color: #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -162,6 +224,106 @@ body {
     -webkit-transition: width 0.6s ease;
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease; }
+
+.match {
+  -webkit-perspective: 1300px;
+  perspective: 1300px; }
+  .match .matches {
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    -webkit-transform: rotateX(-80deg);
+    transform: rotateX(-80deg);
+    -webkit-animation: flip 0.4s ease-in-out forwards;
+    animation: flip 0.4s ease-in-out forwards; }
+    .match .matches:nth-child(2) {
+      animation-delay: 0.1s; }
+    .match .matches:nth-child(3) {
+      animation-delay: 0.15s; }
+    .match .matches:nth-child(4) {
+      animation-delay: 0.2s; }
+    .match .matches:nth-child(5) {
+      animation-delay: 0.25s; }
+    .match .matches:nth-child(6) {
+      animation-delay: 0.3s; }
+    .match .matches:nth-child(7) {
+      animation-delay: 0.35s; }
+    .match .matches:nth-child(8) {
+      animation-delay: 0.4s; }
+    .match .matches:nth-child(9) {
+      animation-delay: 0.45s; }
+    .match .matches:nth-child(10) {
+      animation-delay: 0.5s; }
+    .match .matches:nth-child(11) {
+      animation-delay: 0.55s; }
+    .match .matches:nth-child(12) {
+      animation-delay: 0.6s; }
+    .match .matches:nth-child(13) {
+      animation-delay: 0.65s; }
+    .match .matches:nth-child(14) {
+      animation-delay: 0.7s; }
+    .match .matches:nth-child(15) {
+      animation-delay: 0.75s; }
+    .match .matches:nth-child(16) {
+      animation-delay: 0.8s; }
+    .match .matches:nth-child(17) {
+      animation-delay: 0.85s; }
+    .match .matches:nth-child(18) {
+      animation-delay: 0.9s; }
+    .match .matches:nth-child(19) {
+      animation-delay: 0.95s; }
+    .match .matches:nth-child(20) {
+      animation-delay: 1s; }
+    .match .matches:nth-child(21) {
+      animation-delay: 1.05s; }
+    .match .matches:nth-child(22) {
+      animation-delay: 1.1s; }
+    .match .matches:nth-child(23) {
+      animation-delay: 1.15s; }
+    .match .matches:nth-child(24) {
+      animation-delay: 1.2s; }
+    .match .matches:nth-child(25) {
+      animation-delay: 1.25s; }
+
+@-webkit-keyframes fadeDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0); } }
+
+@keyframes fadeDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+@-webkit-keyframes slidein {
+  to {
+    margin-top: 0; } }
+
+@keyframes slidein {
+  to {
+    margin-top: 0; } }
+
+@-webkit-keyframes flip {
+  0% {
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateX(0deg);
+    opacity: 1; } }
+
+@keyframes flip {
+  0% {
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+    opacity: 1; } }
 
 @-webkit-keyframes anim-shadow {
   to {
