--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/application.css')
-    link(rel="stylesheet" href='https://fonts.googleapis.com/css?family=Lato:400,700')
+    link(href='https://fonts.googleapis.com/css?family=Montserrat|Domine: 400, 700' rel='stylesheet' type='text/css')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js')
     script(src='javascripts/ui-bootstrap-custom-tpls-0.13.4.js')
+    script(src='javascripts/wow.js')
     script(src='javascripts/main.js')
   body(ng-app='battlenetApp')
     block content
+    script(type='text/javascript').
+        new WOW().init();
