--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/application.css')
-    link(href='https://fonts.googleapis.com/css?family=Montserrat|Domine: 400, 700' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Montserrat|Cardo: 400, 700' rel='stylesheet' type='text/css')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js')
     script(src='javascripts/ui-bootstrap-custom-tpls-0.13.4.js')
     script(src='javascripts/wow.js')
