--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -15,6 +15,9 @@ html {
     -webkit-box-sizing: inherit;
     -moz-box-sizing: inherit;
     box-sizing: inherit;
+    &:focus {
+        outline: 0;
+    }
 }
 body {
     font-size: 100%;
@@ -29,6 +32,7 @@ body {
     }
     input {
         font-family: $cardo;
+        border: none;
     }
     ul {
         list-style: none;
@@ -57,102 +61,180 @@ body {
     padding: 40px 0;
 }
 .battle-net-form {
-    margin: 35vh auto 0;
-    height: 180px;
+    margin: 12vh auto 0;
     width: 1000px;
+    .main-logo {
+        display: block;
+        margin: 0 auto;
+        padding-right: 25px;
+    }
     div.form-field {
         float: left;
-        margin-right: 75px;
+        margin-right: 70px;
         margin-bottom: 20px;
         position: relative;
-        z-index: 1;
-    	max-width: 450px;
-    	width: calc(100% - 2em);
+    	width: 465px;
         &:nth-child(2){
             margin-right: 0;
         }
         input[type=text] {
             padding: 10px;
-            border: 2px solid #000;
+            border-bottom: 3px solid #CFCFCF;
+            background: transparent;
             color: #000;
             font-size: 2.2em;
             width: 100%;
+            transition: border-color .25s linear;
             &:focus {
-                outline: none;
+                outline: 0;
+                border-bottom-color: #3a648f;
             }
         }
-        .input-field {
-        	background: #fff;
-        	box-shadow: 0px 0px 0px 2px transparent;
-        	color: #eca29b;
-        	-webkit-transition: box-shadow 0.3s;
-        	transition: box-shadow 0.3s;
-            &:focus {
-                box-shadow: 0px 0px 0px 2px #0e83cd;
-            }
-        }
-        .input-label {
-            padding: 0;
-        	font-weight: bold;
-            &::after {
-                content: '';
-              	position: absolute;
-              	top: 0;
-              	z-index: -1;
-              	width: 100%;
-              	height: 4em;
-            	box-shadow: 0px 0px 0px 0px;
-            	color: #0e83cd;
-            }
-        }
-        .label-content {
-        	padding: 0.75em 0.15em;
-            display: block;
-        }
+
     }
-    input[type="submit"] {
-        display: block;
-        width: 100%;
+    .button {
         cursor: pointer;
-        letter-spacing: 1px;
-        padding: 25px 80px;
-        margin-top: 20px;
-        outline: none;
-        transition: all .3s;
-        border: 2px solid #000;
-        background: #FFF;
-        &:hover {
-            background: #0e83cd;
-            color: #FFF;
+        padding: 10px;
+        width: 50%;
+        text-align: center;
+        margin: 40px auto 0;
+        background: transparent;
+    	color: #237546;
+    	font-weight: 700;
+    	text-shadow: none;
+    	-webkit-transition: color 0.3s;
+    	-moz-transition: color 0.3s;
+    	transition: color 0.3s;
+        position: relative;
+        background: transparent;
+        &::before,
+        &::after {
+            position: absolute;
+        	left: 0;
+        	width: 100%;
+        	height: 2px;
+        	background: #3a648f;
+        	content: '';
+        	opacity: 0;
+        	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+        	-moz-transition: opacity 0.3s, -moz-transform 0.3s;
+        	transition: opacity 0.3s, transform 0.3s;
+        	-webkit-transform: translateY(-10px);
+        	-moz-transform: translateY(-10px);
+        	transform: translateY(-10px);
+        }
+        &::before {
+            top: 0;
+        	-webkit-transform: translateY(-10px);
+        	-moz-transform: translateY(-10px);
+        	transform: translateY(-10px);
+        }
+        &::after {
+            bottom: 0;
+        	-webkit-transform: translateY(10px);
+        	-moz-transform: translateY(10px);
+        	transform: translateY(10px);
+        }
+        &:hover,
+        &:focus {
+            color: #fff;
+        }
+        &:hover::before,
+        &:focus::before,
+        &:hover::after,
+        &:focus::after {
+            opacity: 1;
+        	-webkit-transform: translateY(0px);
+        	-moz-transform: translateY(0px);
+        	transform: translateY(0px);
+        }
+        input[type="submit"] {
+            cursor: pointer;
+            width: 100%;
+            background: transparent;
+            font-size: 30px;
+            font-family: $montserrat;
+            color: #666;
+            transition: color .1s ease-in-out;
+            &:hover {
+                color: #3a648f;
+            }
         }
     }
 }
-.input-field:focus + .input-label::after {
-	-webkit-animation: anim-shadow 0.3s forwards;
-	animation: anim-shadow 0.3s forwards;
-}
+
+
+/*fix duplicate css*/
+
 .bg-wrap.dark {
     background-color: $dark-primary;
 }
-.battle-net-form.fixed-top {
+.battle-net-form.fixed-top-hide {
     height: 100px;
+    width: 100%;
     padding-top: 16px;
     margin: 0 auto;
-    transition: all .5s linear;
-    div.form-field {
-        width: 300px;
-        margin-bottom: 0;
-        &:nth-child(2){
-            margin-right: 75px;
-        }
-    }
-    input[type="submit"] {
-        float: left;
-        width: auto;
-        margin-top: 0;
-        display: inherit;
+    .form-field,
+    .main-logo,
+    .button {
+        display: none;
     }
 }
+.battle-net-form.fixed-top-show {
+    height: 90px;
+    width: 100%;
+    padding: 20px;
+    margin: 0 auto;
+    .fixed-logo-container {
+        float: left;
+        width: 90px;
+    }
+    .fixed-form-container {
+        float: right;
+    }
+    .form-field {
+        display: block;
+        width: 175px;
+        margin-bottom: 0;
+        margin-right: 20px;
+        input[type="text"] {
+            color: #666;
+            padding: 2px 10px;
+            font-size: 1.2em;
+            border-width: 2px;
+            border-color: #666;
+            &:focus {
+                border-color: #3a648f;
+            }
+        }
+    }
+    .main-logo {
+        display: block;
+        float: left;
+        width: 75px;
+        height: auto;
+    }
+    > div .clearfix {
+        float: left;
+        margin-top: 12px;
+    }
+    .button {
+        display: block;
+        float: left;
+        width: 100px;
+        margin-top: 7px;
+        margin-left: 10px;
+        padding: 4px 10px;
+        input[type="submit"] {
+            font-size: 1.2em;
+        }
+    }
+}
+
+
+
+
+
 .career-wrapper {
     box-shadow: inset  0  8px 8px -8px #333,
                 inset  0 -8px 8px -8px #333;
@@ -184,8 +266,8 @@ body {
 }
 .races {
     animation: slidein .5s ease .8s forwards;
-    margin-top: -504px;
-    min-height: 510px;
+    margin-top: -628px;
+    min-height: 645px;
 }
 .race-stats-container {
     width: 1000px;
@@ -222,14 +304,15 @@ body {
         }
     }
 }
-
 .match-history-container {
     width: 1010px;
     margin: 0 auto;
     padding: 60px 0;
     h3 {
         text-align: center;
-        margin-bottom: 20px
+        margin-bottom: 20px;
+        opacity: 0;
+        animation: fadeIn .4s ease .5s forwards;
     }
     ul {
         float: left;
@@ -262,8 +345,6 @@ body {
         }
     }
 }
-
-
 .progress {
     height: 20px;
     overflow: hidden;
@@ -288,7 +369,6 @@ body {
         transition: width .6s ease;
     }
 }
-
 @mixin animation-delay($delay, $i) {
     animation-delay: $delay + $i;
 }
@@ -313,7 +393,14 @@ body {
 
     }
 }
-
+@-webkit-keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
 
 @-webkit-keyframes fadeDown {
     0% {opacity: 0; -webkit-transform: translateY(-40px);}
@@ -339,18 +426,4 @@ body {
 @keyframes flip {
 	0% { opacity: 0; }
 	100% { -webkit-transform: rotateX(0deg); transform: rotateX(0deg); opacity: 1; }
-}
-
-
-@-webkit-keyframes anim-shadow {
-	to {
-		box-shadow: 0px 0px 100px 50px;
-    	opacity: 0;
-	}
-}
-@keyframes anim-shadow {
-	to {
-		box-shadow: 0px 0px 100px 50px;
-    	opacity: 0;
-	}
 }
