--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -7,6 +7,8 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
+  *:focus, *:before:focus, *:after:focus {
+    outline: 0; }
 
 body {
   font-size: 100%;
@@ -19,7 +21,8 @@ body {
     font-family: "Montserrat", sans-serif;
     margin: 0; }
   body input {
-    font-family: "Cardo", serif; }
+    font-family: "Cardo", serif;
+    border: none; }
   body ul {
     list-style: none;
     padding: 0; }
@@ -43,87 +46,147 @@ body {
   padding: 40px 0; }
 
 .battle-net-form {
-  margin: 35vh auto 0;
-  height: 180px;
+  margin: 12vh auto 0;
   width: 1000px; }
+  .battle-net-form .main-logo {
+    display: block;
+    margin: 0 auto;
+    padding-right: 25px; }
   .battle-net-form div.form-field {
     float: left;
-    margin-right: 75px;
+    margin-right: 70px;
     margin-bottom: 20px;
     position: relative;
-    z-index: 1;
-    max-width: 450px;
-    width: calc(100% - 2em); }
+    width: 465px; }
     .battle-net-form div.form-field:nth-child(2) {
       margin-right: 0; }
     .battle-net-form div.form-field input[type=text] {
       padding: 10px;
-      border: 2px solid #000;
+      border-bottom: 3px solid #CFCFCF;
+      background: transparent;
       color: #000;
       font-size: 2.2em;
-      width: 100%; }
+      width: 100%;
+      transition: border-color 0.25s linear; }
       .battle-net-form div.form-field input[type=text]:focus {
-        outline: none; }
-    .battle-net-form div.form-field .input-field {
-      background: #fff;
-      box-shadow: 0px 0px 0px 2px transparent;
-      color: #eca29b;
-      -webkit-transition: box-shadow 0.3s;
-      transition: box-shadow 0.3s; }
-      .battle-net-form div.form-field .input-field:focus {
-        box-shadow: 0px 0px 0px 2px #0e83cd; }
-    .battle-net-form div.form-field .input-label {
-      padding: 0;
-      font-weight: bold; }
-      .battle-net-form div.form-field .input-label::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        z-index: -1;
-        width: 100%;
-        height: 4em;
-        box-shadow: 0px 0px 0px 0px;
-        color: #0e83cd; }
-    .battle-net-form div.form-field .label-content {
-      padding: 0.75em 0.15em;
-      display: block; }
-  .battle-net-form input[type="submit"] {
-    display: block;
-    width: 100%;
+        outline: 0;
+        border-bottom-color: #3a648f; }
+  .battle-net-form .button {
     cursor: pointer;
-    letter-spacing: 1px;
-    padding: 25px 80px;
-    margin-top: 20px;
-    outline: none;
-    transition: all 0.3s;
-    border: 2px solid #000;
-    background: #FFF; }
-    .battle-net-form input[type="submit"]:hover {
-      background: #0e83cd;
-      color: #FFF; }
+    padding: 10px;
+    width: 50%;
+    text-align: center;
+    margin: 40px auto 0;
+    background: transparent;
+    color: #237546;
+    font-weight: 700;
+    text-shadow: none;
+    -webkit-transition: color 0.3s;
+    -moz-transition: color 0.3s;
+    transition: color 0.3s;
+    position: relative;
+    background: transparent; }
+    .battle-net-form .button::before,
+    .battle-net-form .button::after {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: #3a648f;
+      content: '';
+      opacity: 0;
+      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+      -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+      transition: opacity 0.3s, transform 0.3s;
+      -webkit-transform: translateY(-10px);
+      -moz-transform: translateY(-10px);
+      transform: translateY(-10px); }
+    .battle-net-form .button::before {
+      top: 0;
+      -webkit-transform: translateY(-10px);
+      -moz-transform: translateY(-10px);
+      transform: translateY(-10px); }
+    .battle-net-form .button::after {
+      bottom: 0;
+      -webkit-transform: translateY(10px);
+      -moz-transform: translateY(10px);
+      transform: translateY(10px); }
+    .battle-net-form .button:hover,
+    .battle-net-form .button:focus {
+      color: #fff; }
+    .battle-net-form .button:hover::before,
+    .battle-net-form .button:focus::before,
+    .battle-net-form .button:hover::after,
+    .battle-net-form .button:focus::after {
+      opacity: 1;
+      -webkit-transform: translateY(0px);
+      -moz-transform: translateY(0px);
+      transform: translateY(0px); }
+    .battle-net-form .button input[type="submit"] {
+      cursor: pointer;
+      width: 100%;
+      background: transparent;
+      font-size: 30px;
+      font-family: "Montserrat", sans-serif;
+      color: #666;
+      transition: color 0.1s ease-in-out; }
+      .battle-net-form .button input[type="submit"]:hover {
+        color: #3a648f; }
 
-.input-field:focus + .input-label::after {
-  -webkit-animation: anim-shadow 0.3s forwards;
-  animation: anim-shadow 0.3s forwards; }
-
+/*fix duplicate css*/
 .bg-wrap.dark {
   background-color: #222; }
 
-.battle-net-form.fixed-top {
+.battle-net-form.fixed-top-hide {
   height: 100px;
+  width: 100%;
   padding-top: 16px;
-  margin: 0 auto;
-  transition: all 0.5s linear; }
-  .battle-net-form.fixed-top div.form-field {
-    width: 300px;
-    margin-bottom: 0; }
-    .battle-net-form.fixed-top div.form-field:nth-child(2) {
-      margin-right: 75px; }
-  .battle-net-form.fixed-top input[type="submit"] {
+  margin: 0 auto; }
+  .battle-net-form.fixed-top-hide .form-field,
+  .battle-net-form.fixed-top-hide .main-logo,
+  .battle-net-form.fixed-top-hide .button {
+    display: none; }
+
+.battle-net-form.fixed-top-show {
+  height: 90px;
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto; }
+  .battle-net-form.fixed-top-show .fixed-logo-container {
     float: left;
-    width: auto;
-    margin-top: 0;
-    display: inherit; }
+    width: 90px; }
+  .battle-net-form.fixed-top-show .fixed-form-container {
+    float: right; }
+  .battle-net-form.fixed-top-show .form-field {
+    display: block;
+    width: 175px;
+    margin-bottom: 0;
+    margin-right: 20px; }
+    .battle-net-form.fixed-top-show .form-field input[type="text"] {
+      color: #666;
+      padding: 2px 10px;
+      font-size: 1.2em;
+      border-width: 2px;
+      border-color: #666; }
+      .battle-net-form.fixed-top-show .form-field input[type="text"]:focus {
+        border-color: #3a648f; }
+  .battle-net-form.fixed-top-show .main-logo {
+    display: block;
+    float: left;
+    width: 75px;
+    height: auto; }
+  .battle-net-form.fixed-top-show > div .clearfix {
+    float: left;
+    margin-top: 12px; }
+  .battle-net-form.fixed-top-show .button {
+    display: block;
+    float: left;
+    width: 100px;
+    margin-top: 7px;
+    margin-left: 10px;
+    padding: 4px 10px; }
+    .battle-net-form.fixed-top-show .button input[type="submit"] {
+      font-size: 1.2em; }
 
 .career-wrapper {
   box-shadow: inset 0 8px 8px -8px #333, inset 0 -8px 8px -8px #333;
@@ -152,8 +215,8 @@ body {
 
 .races {
   animation: slidein 0.5s ease 0.8s forwards;
-  margin-top: -504px;
-  min-height: 510px; }
+  margin-top: -628px;
+  min-height: 645px; }
 
 .race-stats-container {
   width: 1000px;
@@ -187,7 +250,9 @@ body {
   padding: 60px 0; }
   .match-history-container h3 {
     text-align: center;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: fadeIn 0.4s ease 0.5s forwards; }
   .match-history-container ul {
     float: left;
     width: 190px;
@@ -298,6 +363,18 @@ body {
     .match .matches:nth-child(25) {
       animation-delay: 1.25s; }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 @-webkit-keyframes fadeDown {
   0% {
     opacity: 0;
@@ -336,15 +413,5 @@ body {
     -webkit-transform: rotateX(0deg);
     transform: rotateX(0deg);
     opacity: 1; } }
-
-@-webkit-keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 100px 50px;
-    opacity: 0; } }
-
-@keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 100px 50px;
-    opacity: 0; } }
 
 /*# sourceMappingURL=application.css.map */
