--- a/views/index.jade
+++ b/views/index.jade
@@ -4,16 +4,16 @@ block content
   div(ng-controller="GetUserInformationCtrl" class="container-wrap") 
       div(class="bg-wrap")
           form(ng-submit="processForm()" class="battle-net-form")
-              div(class="clearfix")
-                  div(class="form-field")
-                      input(type="text" class="input-field" ng-model="id" id="battle-net-id" placeholder="battle.net id")
-                      label(class="input-label")
-                          span(class="label-content")
-                  div(class="form-field")
-                      input(type="text" class="input-field" ng-model="name" id="battle-net-name" placeholder="battle.net name")
-                      label(class="input-label") 
-                          span(class="label-content")
-                  input(type="submit" value="Submit")        
+              div(class="fixed-logo-container")
+                  img(class="main-logo" src="/images/sc2-logo-large.png")
+              div(class="fixed-form-container")
+                  div(class="clearfix")
+                      div(class="form-field")
+                          input(type="text" class="input-field" ng-model="id" id="battle-net-id" placeholder="battle.net id")
+                      div(class="form-field")
+                          input(type="text" class="input-field" ng-model="name" id="battle-net-name" placeholder="battle.net name")
+                  div(class="button")
+                      input(type="submit" value="Submit")        
       div(class="wrapper career-wrapper" ng-show="profile")
           div(class="career-stats-container")
               h2 {{profile.displayName}}
@@ -63,8 +63,8 @@ block content
                           li
                               progressbar(max="zergMax" value="zergCurrent")
           div(ng-show="matches")
-              div(class="wow match-history-container clearfix")
-                  h3(class="wow") Last 25 Matches  
+              div(class="match-history-container clearfix")
+                  h3(class="wow" data-wow-offset="200") Last 25 Matches  
                   div(class="match clearfix")          
                       ul(class="matches wow" data-wow-offset="200" ng-repeat="match in matches")
                           li(ng-repeat="(key, val) in match") 
