Added failure modal when anything but a 200 status code is returned

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,12 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/application.css')
     link(href='https://fonts.googleapis.com/css?family=Montserrat|Cardo: 400, 700' rel='stylesheet' type='text/css')
+    link(rel='stylesheet', href='stylesheets/sweetalert.css')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js')
     script(src='javascripts/ui-bootstrap-custom-tpls-0.13.4.js')
     script(src='javascripts/wow.js')
+    script(src='javascripts/sweetalert.min.js')
+    script(src='javascripts/SweetAlert.js')
     script(src='javascripts/main.js')
   body(ng-app='battlenetApp')
     block content
