--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -1,429 +1,10 @@
-$primary: #f5f5f5;
-$dark-primary: #222;
-$gray: #DBDBDB;
-$white: #FFF;
-$cardo: 'Cardo', serif;
-$montserrat: 'Montserrat', sans-serif;
-$primary-text: #333;
-
-html {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-    &:focus {
-        outline: 0;
-    }
-}
-body {
-    font-size: 100%;
-    height: 100%;
-    color: $primary-text;
-    margin: 0;
-    background-color: $primary;
-    font-family: $cardo;
-    h1,h2,h3,h4 {
-        font-family: $montserrat;
-        margin: 0;
-    }
-    input {
-        font-family: $cardo;
-        border: none;
-    }
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-    h2 {
-        font-size: 3.5em;
-    }
-    h3 {
-        font-size: 3.25em;
-    }
-    h4 {
-        font-size: 3em;
-    }
-}
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.container-wrap {
-    width: 100%;
-}
-.wrapper {
-    width: 100%;
-    padding: 40px 0;
-}
-.battle-net-form {
-    margin: 12vh auto 0;
-    width: 1000px;
-    .main-logo {
-        display: block;
-        margin: 0 auto;
-        padding-right: 25px;
-    }
-    div.form-field {
-        float: left;
-        margin-right: 70px;
-        margin-bottom: 20px;
-        position: relative;
-    	width: 465px;
-        &:nth-child(2){
-            margin-right: 0;
-        }
-        input[type=text] {
-            padding: 10px;
-            border-bottom: 3px solid #CFCFCF;
-            background: transparent;
-            color: #000;
-            font-size: 2.2em;
-            width: 100%;
-            transition: border-color .25s linear;
-            &:focus {
-                outline: 0;
-                border-bottom-color: #3a648f;
-            }
-        }
-
-    }
-    .button {
-        cursor: pointer;
-        padding: 10px;
-        width: 50%;
-        text-align: center;
-        margin: 40px auto 0;
-        background: transparent;
-    	color: #237546;
-    	font-weight: 700;
-    	text-shadow: none;
-    	-webkit-transition: color 0.3s;
-    	-moz-transition: color 0.3s;
-    	transition: color 0.3s;
-        position: relative;
-        background: transparent;
-        &::before,
-        &::after {
-            position: absolute;
-        	left: 0;
-        	width: 100%;
-        	height: 2px;
-        	background: #3a648f;
-        	content: '';
-        	opacity: 0;
-        	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-        	-moz-transition: opacity 0.3s, -moz-transform 0.3s;
-        	transition: opacity 0.3s, transform 0.3s;
-        	-webkit-transform: translateY(-10px);
-        	-moz-transform: translateY(-10px);
-        	transform: translateY(-10px);
-        }
-        &::before {
-            top: 0;
-        	-webkit-transform: translateY(-10px);
-        	-moz-transform: translateY(-10px);
-        	transform: translateY(-10px);
-        }
-        &::after {
-            bottom: 0;
-        	-webkit-transform: translateY(10px);
-        	-moz-transform: translateY(10px);
-        	transform: translateY(10px);
-        }
-        &:hover,
-        &:focus {
-            color: #fff;
-        }
-        &:hover::before,
-        &:focus::before,
-        &:hover::after,
-        &:focus::after {
-            opacity: 1;
-        	-webkit-transform: translateY(0px);
-        	-moz-transform: translateY(0px);
-        	transform: translateY(0px);
-        }
-        input[type="submit"] {
-            cursor: pointer;
-            width: 100%;
-            background: transparent;
-            font-size: 30px;
-            font-family: $montserrat;
-            color: #666;
-            transition: color .1s ease-in-out;
-            &:hover {
-                color: #3a648f;
-            }
-        }
-    }
-}
-
-
-/*fix duplicate css*/
-
-.bg-wrap.dark {
-    background-color: $dark-primary;
-}
-.battle-net-form.fixed-top-hide {
-    height: 100px;
-    width: 100%;
-    padding-top: 16px;
-    margin: 0 auto;
-    .form-field,
-    .main-logo,
-    .button {
-        display: none;
-    }
-}
-.battle-net-form.fixed-top-show {
-    height: 90px;
-    width: 100%;
-    padding: 20px;
-    margin: 0 auto;
-    .fixed-logo-container {
-        float: left;
-        width: 90px;
-    }
-    .fixed-form-container {
-        float: right;
-    }
-    .form-field {
-        display: block;
-        width: 175px;
-        margin-bottom: 0;
-        margin-right: 20px;
-        input[type="text"] {
-            color: #666;
-            padding: 2px 10px;
-            font-size: 1.2em;
-            border-width: 2px;
-            border-color: #666;
-            &:focus {
-                border-color: #3a648f;
-            }
-        }
-    }
-    .main-logo {
-        display: block;
-        float: left;
-        width: 75px;
-        height: auto;
-    }
-    > div .clearfix {
-        float: left;
-        margin-top: 12px;
-    }
-    .button {
-        display: block;
-        float: left;
-        width: 100px;
-        margin-top: 7px;
-        margin-left: 10px;
-        padding: 4px 10px;
-        input[type="submit"] {
-            font-size: 1.2em;
-        }
-    }
-}
-
-
-
-
-
-.career-wrapper {
-    box-shadow: inset  0  8px 8px -8px #333,
-                inset  0 -8px 8px -8px #333;
-    transition: all .5s ease;
-}
-.career-stats-container {
-    width: 1000px;
-    margin: 0 auto;
-    text-align: center;
-    color: #FFF;
-    .portrait {
-        border-radius: 50%;
-        height: 90px;
-        width: 90px;
-        margin: 10px auto;
-        border: 2px solid $primary;
-    }
-    ul {
-        font-size: 20px;
-        margin: 0;
-        li {
-            padding: 2px 0;
-        }
-    }
-}
-.card-wrapper {
-    background-color: $primary;
-    position: relative;
-}
-.races {
-    animation: slidein .5s ease .8s forwards;
-    margin-top: -628px;
-    min-height: 645px;
-}
-.race-stats-container {
-    width: 1000px;
-    margin: 0 auto;
-    h4 {
-        text-align: center;
-    }
-    .three-col {
-        float: left;
-        width: 320px;
-        border-radius: 6px;
-        margin-right: 20px;
-        box-shadow: 0 0 6px 0 #333;
-        background-color: $dark-primary;
-        color: $white;
-        animation: fadeDown 1s ease 1.2s forwards;
-        opacity: 0;
-        &:last-child {
-            margin-right: 0;
-        }
-        .upper {}
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 6px 6px 0 0;
-        }
-        .lower{
-            padding: 0 20px;
-        }
-        ul {
-            li {
-                padding: 2px 0;
-            }
-        }
-    }
-}
-.match-history-container {
-    width: 1010px;
-    margin: 0 auto;
-    padding: 60px 0;
-    h3 {
-        text-align: center;
-        margin-bottom: 20px;
-        opacity: 0;
-        animation: fadeIn .4s ease .5s forwards;
-    }
-    ul {
-        float: left;
-        width: 190px;
-        height: 365px;
-        border-radius: 6px;
-        box-shadow: 0 0 6px #000;
-        padding: 65px 10px 10px 10px;
-        margin: 0px 6px 12px 6px;
-        color: $white;
-        opacity: 0;
-        background: url('/images/sc2-icon-light.png') no-repeat 73px 8px $dark-primary;
-        li {
-            text-align: center;
-            &:nth-child(5n) {
-                display: none;
-            }
-            span.match-key {
-                font-weight: 700;
-                text-transform: uppercase;
-                border-bottom: 2px groove #CFCFCF;
-                margin-bottom: 8px;
-                display: block;
-            }
-            span.match-value {
-                display: block;
-                margin-bottom: 15px;
-                text-transform: lowercase;
-            }
-        }
-    }
-}
-.progress {
-    height: 20px;
-    overflow: hidden;
-    margin-top: 8px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-    .progress-bar {
-        float: left;
-        width: 0;
-        height: 100%;
-        font-size: 12px;
-        line-height: 20px;
-        color: #fff;
-        text-align: center;
-        background-color: #337ab7;
-        -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-        box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-        -webkit-transition: width .6s ease;
-        -o-transition: width .6s ease;
-        transition: width .6s ease;
-    }
-}
-@mixin animation-delay($delay, $i) {
-    animation-delay: $delay + $i;
-}
-
-.match {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
-    .matches {
-    	-webkit-transform-style: preserve-3d;
-    	transform-style: preserve-3d;
-    	-webkit-transform-origin: 0% 0%;
-    	transform-origin: 0% 0%;
-    	-webkit-transform: rotateX(-80deg);
-    	transform: rotateX(-80deg);
-    	-webkit-animation: flip .4s ease-in-out forwards;
-    	animation: flip .4s ease-in-out forwards;
-        @for $i from 2 through 25 {
-            &:nth-child(#{$i}) {
-                animation-delay: $i * 0.05s;
-            }
-        }
-
-    }
-}
-@-webkit-keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
-@keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
-
-@-webkit-keyframes fadeDown {
-    0% {opacity: 0; -webkit-transform: translateY(-40px);}
-    100% {opacity: 1; -webkit-transform: translateY(0);}
-}
-@keyframes fadeDown {
-    0% {opacity: 0; transform: translateY(-40px);}
-    100% {opacity: 1; transform: translateY(0);}
-}
-
-@-webkit-keyframes slidein {
-    to { margin-top: 0;}
-}
-@keyframes slidein {
-    to { margin-top: 0;}
-}
-
-@-webkit-keyframes flip {
-	0% { opacity: 0; }
-	100% { -webkit-transform: rotateX(0deg); opacity: 1; }
-}
-
-@keyframes flip {
-	0% { opacity: 0; }
-	100% { -webkit-transform: rotateX(0deg); transform: rotateX(0deg); opacity: 1; }
-}
+@import 'variables';
+@import 'mixins';
+@import 'animations';
+@import 'global';
+@import 'containers';
+@import 'homepage-form';
+@import 'header-form';
+@import 'career-stats';
+@import 'race-stats';
+@import 'match-history';
