--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -5,6 +5,7 @@
 @import 'containers';
 @import 'homepage-form';
 @import 'header-form';
+@import 'mobile-menu';
 @import 'career-stats';
 @import 'race-stats';
 @import 'match-history';
