--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,13 @@ extends layout
 block content
   div(ng-controller="GetUserInformationCtrl" class="container-wrap") 
       div(class="bg-wrap")
-          form(ng-submit="processForm()" class="battle-net-form")
+          form(ng-submit="processForm()" class="battle-net-form clearfix")
               div(class="fixed-logo-container")
-                  img(class="main-logo" src="/images/sc2-logo-large.png")
-              div(class="fixed-form-container")
+                  a(href="/")
+                      img(class="main-logo" src="/images/sc2-logo-large.png")
+              div(class="clearfix search-icon" ng-click="showMenu = !showMenu")
+                  img(src="/images/search-icon.png")
+              div(class="fixed-form-container" ng-class="{'mobile-hide': !showMenu, 'mobile-show': showMenu}")
                   div(class="clearfix")
                       div(class="form-field")
                           input(type="text" class="input-field" ng-model="id" id="battle-net-id" placeholder="battle.net id")
