--- a/public/scss/containers.scss
+++ b/public/scss/containers.scss
@@ -4,6 +4,9 @@
 .wrapper {
     width: 100%;
     padding: 40px 0;
+    @include tablet-mobile {
+        padding: 20px 0;
+    }
 }
 .bg-wrap.dark {
     background-color: $dark-primary;
@@ -12,6 +15,9 @@
     box-shadow: inset  0  8px 8px -8px $dark-shadow,
                 inset  0 -8px 8px -8px $dark-shadow;
     transition: all .5s ease;
+    @include tablet-mobile {
+        //margin-top: 207px;
+    }
 }
 .card-wrapper {
     background-color: $primary;
