--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -38,6 +38,9 @@ body {
     }
     h4 {
         font-size: 3em;
+        @include desktop {
+            font-size: 2.5em;
+        }
     }
 }
 .clearfix:after {
