--- a/public/scss/homepage-form.scss
+++ b/public/scss/homepage-form.scss
@@ -1,10 +1,25 @@
 .battle-net-form {
     margin: 12vh auto 0;
     width: 1000px;
+    @include desktop {
+        width: 700px;
+    }
+    @include tablet-mobile {
+        width: 100%;
+        padding: 0 10px;
+        margin-top: 2vh;
+    }
     .main-logo {
         display: block;
         margin: 0 auto;
         padding-right: 25px;
+        @include tablet-mobile {
+            max-width: 50%;
+            padding-right: 0;
+        }
+    }
+    .search-icon {
+        display: none;
     }
     div.form-field {
         float: left;
@@ -12,8 +27,19 @@
         margin-bottom: 20px;
         position: relative;
     	width: 465px;
+        @include desktop {
+            width: 315px;
+        }
+        @include tablet-mobile {
+            width: 100%;
+            margin-right: 0;
+            margin-top: 20px;
+        }
         &:nth-child(2){
             margin-right: 0;
+            @include tablet-mobile {
+                margin-right: auto;
+            }
         }
         input[type=text] {
             padding: 10px;
@@ -23,6 +49,9 @@
             font-size: 2.2em;
             width: 100%;
             transition: border-color .25s linear;
+            @include tablet-mobile {
+                font-size: 1.5em;
+            }
             &:focus {
                 outline: 0;
                 border-bottom-color: $blue-sc;
@@ -45,6 +74,9 @@
     	transition: color 0.3s;
         position: relative;
         background: transparent;
+        @include tablet-mobile {
+            margin-top: 15px;
+        }
         &::before,
         &::after {
             position: absolute;
