--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -15,3 +15,6 @@ $cardo: 'Cardo', serif;
 $montserrat: 'Montserrat', sans-serif;
 //Numbers
 $container-width: 1000px;
+//Responsive
+$desktop: 1023px;
+$tablet-mobile: 767px;
